✨ feat: Implement SQLite database for meeting management
- Added SQLite repository for meeting data operations including CreateMeeting and ListMeetings functions.
- Integrated database setup in main.go and initialized schema.
- Updated handlers to utilize the new repository for creating and listing meetings.
- Enhanced models to support database interactions and modified frontend to accommodate new data structure.

--- a/static/index.html
+++ b/static/index.html
@@ -45,7 +45,7 @@
                     <button id="createMeetingBtn" class="w-full bg-blue-500 text-white py-2 px-4 rounded hover:bg-blue-600">
                         Create New Meeting
                     </button>
-                    <input type="file" id="fileInput" class="hidden" accept=".json">
+                    <input type="file" id="fileInput" class="hidden" accept=".txt,.json,.md,.text">
                 </div>
             </div>
 
@@ -115,4 +115,4 @@
     </div>
     <script src="/static/app.js"></script>
 </body>
-</html> 
+</html>
